objects/Billing_Item__c.object
<CustomObject>
    <fields>
        <fullName>Line_Link__c</fullName>
        <formula>HYPERLINK( Id , &quot;link&quot; , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Account__c</fullName>
        <formula>HYPERLINK( Contract__r.Account.Id , &quot;Go to Account&quot; , &quot;link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>click the link to be taken to the account page</inlineHelpText>
        <label>Link to Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Site_URL__c</fullName>
        <label>Live Site URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MSDelayRemovedDONOTCHANGE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSDelayRemovedDONOTCHANGE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MotoSnap_User_Id__c</fullName>
        <label>MotoSnap User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Launch_Date__c</fullName>
        <label>No Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Approval_Status__c</fullName>
        <label>OEM Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OEM_Dealer_Code__c</fullName>
        <label>OEM Dealer Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Marketing_3rd_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup the OEM Marketing 3rd Party account from the accounts object</inlineHelpText>
        <label>OEM Marketing 3rd Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billed Assets</relationshipLabel>
        <relationshipName>Billing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OEM_Marketing_Required__c</fullName>
        <label>OEM Marketing Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opp_Type__c</fullName>
        <formula>TEXT(Contract__r.Related_Opportunity__r.Opportunity_Names__c)</formula>
        <label>Opp Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordered_By__c</fullName>
        <inlineHelpText>name of the person at the dealership who submitted the campaign request</inlineHelpText>
        <label>Ordered By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POA_Id__c</fullName>
        <formula>Related_POA__r.Id</formula>
        <inlineHelpText>hidden field for data migration</inlineHelpText>
        <label>POA Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Billing_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup the Billed Asset that will be the parent</inlineHelpText>
        <label>Parent Billed Asset</label>
        <referenceTo>Billing_Item__c</referenceTo>
        <relationshipLabel>Child Billed Assets</relationshipLabel>
        <relationshipName>Billing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pdt_Grouping_Category__c</fullName>
        <formula>TEXT(Product_Sold__r.Grouping_Category__c)</formula>
        <inlineHelpText>formula field that reads the grouping category from the product profile</inlineHelpText>
        <label>Pdt Grouping Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <picklist>
            <picklistValues>
                <fullName>CMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAWP-Responsive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_Pro_rated_Revenue__c</fullName>
        <formula>(  Total_Price__c  /30)* (30- Billing_Start_Day__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that takes (Total Price/30 days) * (30-billing start day)</inlineHelpText>
        <label>Potential Pro-rated Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prepaid_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>this checkbox is set to true (checked) by the system if prepayment was collected for the first monthly billing for this product</inlineHelpText>
        <label>Prepaid Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Difference__c</fullName>
        <description>admin only</description>
        <formula>Sale_Price__c - Prior_Sale_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>admin only for reporting - difference between Sale price and prior sale price</inlineHelpText>
        <label>Price Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Dealer_ID__c</fullName>
        <inlineHelpText>This is the Dealer ID that the site reflects.</inlineHelpText>
        <label>Primary Dealer ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Line_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>used to mark the line item that when marked complete will drive the start of billing for all related line items</inlineHelpText>
        <label>Primary Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_Sale_Price__c</fullName>
        <inlineHelpText>this field is updated by workflow whenever the sale price is updated that causes the total price to update</inlineHelpText>
        <label>Prior Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Start_Date__c</fullName>
        <label>Prior Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Alert__c</fullName>
        <label>Product Alert</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Billing_Type_Indicator__c</fullName>
        <description>Used by Flow to read the value of the product&apos;s Billing Type Indicator. Used to avoid a query in a loop in Set Account Billing Type.</description>
        <formula>TEXT(Product_Sold__r.Billing_Type_Indicator__c)</formula>
        <label>Product Billing Type Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product_Sold__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_External_Name__c</fullName>
        <formula>Product_Sold__r.vAuto_Subscription_Name__c</formula>
        <inlineHelpText>formula field that reads the products external product name (vauto app)</inlineHelpText>
        <label>Product External Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_Workflow__c</fullName>
        <inlineHelpText>updated by workflow becasue salesforce will not allow you to use product information in rollup summaries</inlineHelpText>
        <label>Product Family (Workflow)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(Product_Sold__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that reads the Product Family from the Product detail record</inlineHelpText>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Grouping_Category__c</fullName>
        <formula>TEXT(Product_Sold__r.Grouping_Category__c)</formula>
        <inlineHelpText>admin field used for reporting - not on page layout</inlineHelpText>
        <label>Product Grouping Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_and_Status__c</fullName>
        <description>Used by a dynamic choice in a Flow to display both the Product Name and Status in the product options.</description>
        <formula>IF( isBaseAsset__c = True,Suite_Name__c &amp; &quot; - &quot; &amp; TEXT(LOB_Status__c), NULL)</formula>
        <label>Product Name and Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Site_Type__c</fullName>
        <label>Product/Site Type</label>
        <picklist>
            <picklistValues>
                <fullName>S14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Sold_Debug__c</fullName>
        <formula>Product_Sold__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Referenced by Flow.</inlineHelpText>
        <label>Product Sold Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Sold</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Billed Assets</relationshipLabel>
        <relationshipName>Billing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Status_Prior_Value__c</fullName>
        <inlineHelpText>read only field updated by workflow when the product status is changed</inlineHelpText>
        <label>Product Status Prior Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <description>The reference point for whether this Billed Asset is active or not. Based on the BI&apos;s record type.</description>
        <formula>IF( 
Business_Unit__c = &quot;VinSolutions&quot;, 
CASE(RecordType.DeveloperName, 
&quot;ADD&quot;, &quot;Inactive&quot;, 
&quot;CANCEL&quot;,&quot;Inactive&quot;, 
&quot;Locked&quot;, &quot;Inactive&quot; , 
&quot;Active&quot; 
), 
IF( 
Business_Unit__c = &quot;vAuto&quot;, 
IF( 
RecordType.DeveloperName = &quot;ADD&quot; &amp;&amp; ISBLANK(Active_Date__c), 
&quot;Pending&quot;, 
IF( 
RecordType.DeveloperName = &quot;ADD&quot; &amp;&amp; !ISBLANK(Active_Date__c), 
&quot;Active&quot;, 
IF( 
RecordType.DeveloperName = &quot;Process_Stop&quot; , 
&quot;Active&quot;, 
IF( 
RecordType.DeveloperName = &quot;MODIFY&quot; , 
&quot;Active&quot;, 
IF( 
RecordType.DeveloperName = &quot;Locked&quot; &amp;&amp;  !ISBLANK(Active_Date__c)  &amp;&amp;  ISBLANK(End_Date__c) , 
&quot;Active&quot;, 
&quot;Inactive&quot; 

) 
) 
) 
) 
), 
&quot;Not Applicable&quot; 
) 
)</formula>
        <inlineHelpText>The reference point for whether this Billed Asset is active or not. Based on the BI&apos;s record type.</inlineHelpText>
        <label>Billed Asset Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_Indicator__c</fullName>
        <description>Used by Flow to read the value of the product&apos;s Billing Type Indicator. Used to avoid a query in a loop in Set Account Billing Type.</description>
        <formula>TEXT(Product_Sold__r.Billing_Type_Indicator__c)</formula>
        <label>Product Billing Type Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Department__c</fullName>
        <formula>TEXT(Product_Sold__r.Production_Department__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Action__c</fullName>
        <formula>Related_Project_Piece__r.Project__r.Action__c</formula>
        <inlineHelpText>Formula field that reads the Project Action field from the Project</inlineHelpText>
        <label>Project Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Definition__c</fullName>
        <description>Used by Vin Accounting to report on which project Billed Assets are linked to.</description>
        <formula>Product_Sold__r.Project_Definition__r.Project_Short_Code__c</formula>
        <label>Project Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_MRR__c</fullName>
        <formula>Related_Project_Piece__r.Project__r.Project_Value_2__c</formula>
        <label>Project MRR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <formula>Related_Project_Piece__r.Project_Status__c</formula>
        <inlineHelpText>Formula field that reads the Project Status and displays the information into the Billing Asset</inlineHelpText>
        <label>Project Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <formula>Related_Project_Piece__r.Project__r.Project_Type__c</formula>
        <inlineHelpText>Formula that pulls from the Project&apos;s Type</inlineHelpText>
        <label>Project Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old_Project</label>
        <referenceTo>SFDC_520_Quote__c</referenceTo>
        <relationshipLabel>Billed Assets</relationshipLabel>
        <relationshipName>Billing_Items_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_nbr__c</fullName>
        <formula>Related_Project_Piece__r.Project__r.Name</formula>
        <inlineHelpText>Formula field that pulls the Project Name associated with the Project Asset</inlineHelpText>
        <label>Project #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <formula>IF(
 ISNULL( Legacy_ID__c ), DATEVALUE(CreatedDate) ,  Legacy_Purchase_Date__c )</formula>
        <inlineHelpText>Formula field that reads the Created Date and time and displays as date</inlineHelpText>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Default to 1. Contracted Qty.  For recurring charges. Qty cannot be zero</inlineHelpText>
        <label>Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMB_Contract_Id__c</fullName>
        <formula>Contract__r.RMB_Contract_Id__c</formula>
        <label>RMB Contract Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMB_from_Import__c</fullName>
        <inlineHelpText>temp</inlineHelpText>
        <label>RMB # from Import</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_to_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is updated when you are ready to send the Contract and Billed Assets to AutoTrader for billing</inlineHelpText>
        <label>Ready to Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Change__c</fullName>
        <inlineHelpText>free form text box for user to input the reason for the change</inlineHelpText>
        <label>Reason for Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recurring_Flag__c</fullName>
        <inlineHelpText>FR means that the invoice periods will start on the contract start date and the Frequency value will dictate the invoice period e.g. monthly 
BP  = invoice period will start on the date defined/configured in RMB as part of the Bill Period.</inlineHelpText>
        <label>Recurring Flag</label>
        <picklist>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Redesign_Date__c</fullName>
        <label>Redesign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Appeal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup the related appeal</inlineHelpText>
        <label>Related Appeal</label>
        <referenceTo>Appeal__c</referenceTo>
        <relationshipLabel>Billed Assets</relationshipLabel>
        <relationshipName>Billing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Billed Assets</relationshipLabel>
        <relationshipName>Billed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup the POA that the account manager will use to manage this asset</inlineHelpText>
        <label>Related POA</label>
        <referenceTo>POA__c</referenceTo>
        <relationshipLabel>Billed Assets</relationshipLabel>
        <relationshipName>Billing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Project_Piece__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Project Asset</label>
        <referenceTo>Project_Piece__c</referenceTo>
        <relationshipLabel>Billed Assets</relationshipLabel>
        <relationshipName>Billing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>links to the Training object</inlineHelpText>
        <label>Related Training</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Billed Assets</relationshipLabel>
        <relationshipName>Billing_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Category__c</fullName>
        <formula>TEXT(Revenue_Type__c)  &amp;&quot;/&quot;&amp; Appeal_Category__c</formula>
        <inlineHelpText>Formula field that concatenates the Product Family and Appeal Category</inlineHelpText>
        <label>Revenue Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <picklist>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring Advance Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring Pass Thru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring Pro-rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup Credit</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reversion_Reason__c</fullName>
        <description>VinSolutions Websites</description>
        <inlineHelpText>used by the Website Team to track platform changes</inlineHelpText>
        <label>Reversion Reason</label>
        <picklist>
            <picklistValues>
                <fullName>SRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slowness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reverted_Date__c</fullName>
        <description>VinSolutions Website</description>
        <inlineHelpText>used by the Website Team to track website platform changes</inlineHelpText>
        <label>Reverted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SE_Priority__c</fullName>
        <formula>CASE( LOB_Status__c , 
&quot;At Risk&quot;, &quot;High&quot;, 
&quot;Pending-Launch Approval&quot;, &quot;High&quot;,
&quot;Triage&quot;, &quot;High&quot;,
&quot;Good&quot;, &quot;Low&quot;,
&quot;No Status&quot;)</formula>
        <inlineHelpText>Formula field that looks at the Product Status and sets the SE Priority.  At Risk, Pending Launch Approval and Triage set the SE Priority to High</inlineHelpText>
        <label>Status Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <label>Sale Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Send_Adjustment_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>used to send billing adjustments to the RMB Team via Email</inlineHelpText>
        <label>Send Adjustment Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shiping_ZipCode__c</fullName>
        <label>Shiping ZipCode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_1__c</fullName>
        <label>Shipping Address 1</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_2__c</fullName>
        <label>Shipping Address 2</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Suffix__c</fullName>
        <label>Shipping Zip Suffix</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Id__c</fullName>
        <externalId>true</externalId>
        <label>Site Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Site_OEM__c</fullName>
        <label>Site OEM</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bugatti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harley Davidson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hummer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <formula>Product_Sold__r.Proposal_Sort_Order__c</formula>
        <inlineHelpText>Formula field that reads the Proposal Sort Order number from the Product record</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Contract_Id__c</fullName>
        <formula>Contract__r.Source_Contract_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Contract Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Line__c</fullName>
        <formula>IF( Legacy_ID__c != &quot;&quot; &amp;&amp; legacy_Line__c != &quot;&quot; ,  legacy_Line__c ,  
IF( Legacy_ID__c != &quot;&quot; &amp;&amp;  Alternate_Line__c  != &quot;&quot; ,  Alternate_Line__c ,
Name ))</formula>
        <inlineHelpText>if a legacy Id is present, use the legacy line #, otherwise use the asset link (object auto number)</inlineHelpText>
        <label>Source Line #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Account_Status__c</fullName>
        <formula>TEXT( Contract__r.Account.Special_Account_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check this box to accept the start date even though the Go Live Date is different</inlineHelpText>
        <label>Start Date Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Default to Contract Start Date for all one time. Cannot be after Contract Stop Date or before Contract Start Date. Must be on or after Line Start Date. For Deposits, default to Contract Start Date.</inlineHelpText>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Month_Year__c</fullName>
        <formula>TEXT(MONTH( Active_Date__c )) &amp;&quot;-&quot;&amp; TEXT(YEAR(Active_Date__c))</formula>
        <inlineHelpText>formula field that changes the active date to a month year for reconciling vauto subscriptions</inlineHelpText>
        <label>Start Month Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>physical location of the asset</inlineHelpText>
        <label>Subscriber Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billed Assets (Subscriber Account)</relationshipLabel>
        <relationshipName>Billed_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscriber_SVOC_ID__c</fullName>
        <description>Formula field that reads the subscriber SVOC (physical location)</description>
        <formula>Contract__r.Account.SVOC_Id__c</formula>
        <inlineHelpText>Formula field that reads the subscriber SVOC (physical location)</inlineHelpText>
        <label>Subscriber SVOC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suite_Name__c</fullName>
        <formula>TEXT(Product_Sold__r.Product_Suite__c)</formula>
        <inlineHelpText>Formula field that reads the Product Sold name and gives it a different column header for the related list on the POA</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <inlineHelpText>vAuto Product Termination Date</inlineHelpText>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Today_s_Date__c</fullName>
        <description>admin only field used for process builder since at this time (5/2015) you are unable to use a date function in the process builder</description>
        <formula>Today()</formula>
        <label>Today&apos;s Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Behavorial_Campaigns__c</fullName>
        <label>Total Behavorial Campaigns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Price_Converted__c</fullName>
        <formula>IF( 
   RecordTypeId = &quot;01270000000Q9wT&quot; &amp;&amp; Sale_Price__c &gt; 0, 
   Qty__c * Sale_Price__c * -1, 
   IF(
      ISPICKVAL(Contract__r.Currency__c, &quot;CAD&quot;),
      Qty__c * Sale_Price__c * Related_Opportunity__r.CAD_Conversion_Rate__c,
      Qty__c * Sale_Price__c
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price (Converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Qty__c * Sale_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity * Sale Price</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training_Complete_Date__c</fullName>
        <inlineHelpText>not used</inlineHelpText>
        <label>OLD_Date Training Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Included__c</fullName>
        <formula>TEXT(Contract__r.Training_Included__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Included</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Alt_Shipping_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Alt Shipping Address</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>